--- a/final/assets/in-progress.css
+++ b/final/assets/in-progress.css
@@ -13,23 +13,9 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-}
-#top-embellishments {
-    position: absolute;
-    box-sizing: border-box;
     margin-top: 15vh;
-    height: 135vh;
-    z-index: -10;
-    
 }
-#bottom-embellishments {
-    position: absolute;
-    box-sizing: border-box;
-    margin-top: 120vh;
-    height: 150vh;
-    left: 0px;
-    z-index: -10;
-}
+
 
 /* nav bar */ 
 
@@ -169,40 +155,11 @@ a {
 
 
 
-
-
-
-
-
-
 /* intro */
-.intro {
-    position: relative;
-    margin-top: 20vh;
-    margin-left: 10%;
-}
-.words h1 {
-    font-size: 15vh;
-    font-weight: lighter;
-    margin-bottom: 4vh;
-}
-.words h4 {
-    font-size: 5vh;
-    font-weight: lighter;
-    margin-top: 5vh;
-}
-.words {
-    margin-left: 7.5vh;
-    margin-top: 7vh;
-    position: absolute;
-    z-index: -10;
-
-}
-#solarsystem {
-    height: 62vh;
-    position: absolute;
-    margin-left: 0vh;
-    z-index: -15;
+.content {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 
@@ -225,31 +182,31 @@ a {
     height: 75vh;
     width: 75vh;
     opacity: 50%;
-    left: 20px;
-    margin-left: 50%;
-    margin-top: -40vh;
+    right: 20px;
+    margin-right: 50%;/*
+    margin-top: -100vh;*/
     position: absolute;
 }
 #shape-2 {
     background-color: #FBBA5A;
     opacity: 50%;
-    right: 20px;
+    left: 20px;
     height: 50vh;
     width: 50vh;
-    margin-left: 65%;
-    margin-top: 25vh;
+    margin-right: 65%;/*
+    margin-top: -25vh;*/
     position: absolute;
     animation-delay: 2s;
 }
 #shape-3 { 
     background-color: #5ADEFB;
     opacity: 60%;
-    left: 130px;
+    right: 130px;
     top: 50px;
     height: 50vh;
     width: 50vh;
-    margin-left: 45%;
-    margin-top: 15vh;
+    margin-right: 45%; /*
+    margin-top: -45vh; */
     position: absolute;
     animation-delay: 4s;
 }
@@ -283,213 +240,20 @@ a {
     }
   }
 
-
-.lulu-blobs {
-    position: relative;
-    z-index: -20;
-    width: 75vh;
-}
-#lulu-blob-1, #lulu-blob-2, #lulu-blob-3 {
-    min-width: 20vh;
-    height: 20vh;
-    width: 20vh;
-    mix-blend-mode: multiply;
-    filter: blur(8vh);
-    border-radius: 50%;
-    animation: scale-up-small 5s cubic-bezier(0.39, 0.575, 0.565, 1) infinite both;
-}
-#lulu-blob-1 {
-    background-color: #FF3434;
-    height: 40vh;
-    width: 40vh;
-    opacity: 50%;
-    margin-top: 14vh;
-    position: absolute;
-}
-#lulu-blob-2 {
-    background-color: #ffb83e;
-    opacity: 40%;
-    height: 30vh;
-    width: 30vh;
-    margin-left: 40%;
-    margin-top: 19vh;
-    position: absolute;
-    animation-delay: 2s;
-}
-#lulu-blob-3 { 
-    background-color: #ff0000;
-    opacity: 40%;
-    top: 50px;
-    height: 30vh;
-    width: 30vh;
-    margin-top: 10vh;
-    margin-left: 50%;
-    position: absolute;
-    animation-delay: 4s;
-}
-
-
-.bidc-blobs {
-    position: relative;
-    z-index: -20;
-    width: 75vh;
-}
-#bidc-blob-1, #bidc-blob-2, #bidc-blob-3 {
-    min-width: 20vh;
-    height: 20vh;
-    width: 20vh;
-    mix-blend-mode: multiply;
-    filter: blur(8vh);
-    border-radius: 50%;
-    animation: scale-up-small 5s cubic-bezier(0.39, 0.575, 0.565, 1) infinite both;
-}
-#bidc-blob-1 {
-    background-color: #FF7D34;
-    height: 40vh;
-    width: 40vh;
-    opacity: 50%;
-    margin-top: 5vh;
-    position: absolute;
-}
-#bidc-blob-2 {
-    background-color: #FF974D;
-    opacity: 40%;
-    height: 30vh;
-    width: 30vh;
-    margin-left: 40%;
-    margin-top: 10vh;
-    position: absolute;
-    animation-delay: 2s;
-}
-#bidc-blob-3 { 
-    background-color: #FBBA5A;
-    opacity: 40%;
-    top: 50px;
-    height: 30vh;
-    width: 30vh;
-    margin-left: 50%;
-    margin-top: 20vh;
-    position: absolute;
-    animation-delay: 4s;
-}
-
-
-.forgepoint-blobs {
-    position: relative;
-    z-index: -20;
-    width: 75vh;
-}
-#forgepoint-blob-1, #forgepoint-blob-2, #forgepoint-blob-3 {
-    min-width: 20vh;
-    height: 20vh;
-    width: 20vh;
-    mix-blend-mode: multiply;
-    filter: blur(8vh);
-    border-radius: 50%;
-    animation: scale-up-small 5s cubic-bezier(0.39, 0.575, 0.565, 1) infinite both;
-}
-#forgepoint-blob-1 {
-    background-color: #721ED6;
-    height: 40vh;
-    width: 40vh;
-    opacity: 50%;
-    margin-top: 15vh;
-    position: absolute;
-}
-#forgepoint-blob-2 {
-    background-color: #504DFF;
-    opacity: 40%;
-    height: 30vh;
-    width: 30vh;
-    margin-left: 40%;
-    margin-top: 20vh;
-    position: absolute;
-    animation-delay: 2s;
-}
-#forgepoint-blob-3 { 
-    background-color: #7381FF;
-    opacity: 40%;
-    top: 50px;
-    height: 30vh;
-    width: 30vh;
-    margin-left: 50%;
-    margin-top: 5vh;
-    position: absolute;
-    animation-delay: 4s;
-}
-
-
-
-
-/* projects */
-.projects {
-    margin-top: 80vh;
-    display: flex;
-    flex-direction: column;
-    margin-right: 10%;
-    margin-left: 10%;
-    align-items: flex-start;
-}
-.projects h1 {
-    font-weight: lighter;
-    margin-bottom: 1vh;
-}
-.projects h3 {
-    margin-top: 0px;
-    font-weight: lighter;
-}
-.projects p {
-    font-family: 'Roboto Slab';
-    margin-top: 4.5vh;
-    width: 51vh;
-}
-.proj-block {
-    transition: 0.3s;
-    margin-top: 4.5vh;
-}
-.proj-block:hover {
-    transform: translate(0, -20px);
-    cursor: pointer;
-}
-#bi-design-challenge {
-    align-self: flex-end;
-    margin-left: 0;
-    margin-top: -25vh;
-}
-#forgepoint {
-    margin-top: -10vh;
-}
-
-#background {
-    box-sizing: border-box;
-    width: 75vh;
-    z-index: -10;
-}
-.blurb {
-    position: absolute;
-    margin-top: -37vh;
-    margin-left: 14.5vh;
-}
-.right-blurb {
-    position: absolute;
-    text-align: right;
-    margin-top: -37vh;
-    margin-left: 10.5vh;
-}
-
-@media (max-width: 65em) {
-    .projects {
+@media (max-width: 70em) {
+    .content {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
         align-items: center;
-        margin-bottom: 25vh;
+        margin-right: 5vh;
+        margin-left: 5vh;
     }
-    #bi-design-challenge {
-        align-self: center;
-        margin-top: 0;
+    .words {
+        margin-left: 0;
+        width: 100%
     }
-    #forgepoint {
-        margin-top: 0;
-    }
-    .embellishments {
-        opacity: 0;
+    #solarsystem {
+
     }
 }
