--- a/final/assets/style.css
+++ b/final/assets/style.css
@@ -8,24 +8,29 @@ html {
 }
 body {
     margin: 0;
+    overflow-x: hidden;
 }
 .embellishments {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 15vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    
 }
 #top-embellishments {
     position: absolute;
     box-sizing: border-box;
-    margin-top: 15vh;
     height: 135vh;
     z-index: -10;
-    
 }
 #bottom-embellishments {
     position: absolute;
     box-sizing: border-box;
-    margin-top: 120vh;
+    margin-top: 105vh;
     height: 150vh;
     left: 0px;
     z-index: -10;
@@ -490,6 +495,32 @@ a {
         margin-top: 0;
     }
     .embellishments {
-        opacity: 0;
+        display: none;
+    }
+
+    .intro {
+        position: relative;
+        margin-top: 20vh;
+        margin-left: 10%;
+        margin-right: 10%
+    }
+    .words h1 {
+        font-size: 15vh;
+        font-weight: lighter;
+        margin-
+        
+        bottom: 4vh;
+    }
+    .words h4 {
+        font-size: 5vh;
+        font-weight: lighter;
+        margin-top: 5vh;
+    }
+    .words {
+        margin-left: 7.5vh;
+        margin-top: 7vh;
+        position: absolute;
+        z-index: -10;
+    
     }
 }
