some mobile changes

--- a/final/assets/style.css
+++ b/final/assets/style.css
@@ -9,7 +9,6 @@ html {
 body {
     margin: 0;
     overflow-x: hidden;
-
 }
 .embellishments {
     display: flex;
@@ -210,6 +209,11 @@ a {
     margin-left: 0vh;
     z-index: -15;
 }
+
+
+
+
+
 
 
 /* blobbies */
@@ -484,9 +488,16 @@ a {
 }
 
 @media (max-width: 65em) {
+    html, body {
+        overflow-x: hidden;
+    }
     .projects {
         align-items: center;
+        justify-content: center;
         margin-bottom: 25vh;
+        margin-left: 10%;
+        margin-right: 10%;
+        width: 50%;
     }
     #bi-design-challenge {
         align-self: center;
@@ -498,25 +509,29 @@ a {
     .embellishments {
         display: none;
     }
-
+    .proj-block {
+        width: 50%;
+    }
     .intro {
         position: relative;
         margin-top: 20vh;
+        margin-right: 10%;
+    }
+    .words {
         margin-left: 10%;
-        margin-right: 10%
     }
     .words h1 {
         font-size: 10vh;
-        font-weight: lighter;
-        margin-bottom: 4vh;
     }
     .words h4 {
         font-size: 3vh;
-        font-weight: lighter;
-        margin-top: 5vh;
     }
     #solarsystem {
         height: 45vh;
         overflow-x: hidden;
     }
+    #logo {
+        height: 5vh;
+    }
+    
 }
